--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
       <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
-      <div class="flex justify-center space-x-6">
+      <div class="flex justify-center space-x-6 mb-4">
         <a href="https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
           <i class="fab fa-facebook-f"></i>
           <span>Facebook</span>
@@ -126,6 +126,9 @@
           <span>Instagram</span>
         </a>
       </div>
+      <button id="open-chat" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition font-semibold text-md">
+        <i class="fas fa-comments mr-2"></i>Chat with Us
+      </button>
     </div>
   </footer>
 
@@ -141,9 +144,10 @@
     });
   </script>
 
-  <!-- Tawk.to Live Chat Script -->
+  <!-- Tawk.to Live Chat Script with API Integration -->
   <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    Tawk_API.api_key = '98b9a19a5b7bf1d2b6af110875d8f5a3f14d19e1';
     (function(){
       var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
       s1.async=true;
@@ -152,13 +156,24 @@
       s1.setAttribute('crossorigin','*');
       s0.parentNode.insertBefore(s1,s0);
     })();
-    // Customize Tawk.to widget appearance
+    // Customize Tawk.to widget appearance and behavior
     Tawk_API.onLoad = function() {
-      Tawk_API.setAttributes({
-        'widgetColor': '#2563EB', // Matches Tailwind's blue-600
-        'widgetBackgroundColor': '#111827' // Matches Tailwind's gray-900
-      });
+      // Set widget colors to match site design
+      Tawk_API.customStyle = {
+        bubbleBackground: '#2563EB', // Tailwind blue-600
+        bubbleTextColor: '#FFFFFF', // White text
+        chatBackground: '#111827' // Tailwind gray-900
+      };
+      // Minimize widget on load
+      Tawk_API.minimize();
     };
+    // Open chat when "Chat with Us" button is clicked
+    document.addEventListener('DOMContentLoaded', () => {
+      const openChatButton = document.getElementById('open-chat');
+      openChatButton.addEventListener('click', () => {
+        Tawk_API.maximize();
+      });
+    });
   </script>
 
 </body>
