--- a/hostels.html
+++ b/hostels.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Explore student hostels by BrightWave Enterprises in Nigeria." />
   <title>Hostels | BrightWave Enterprises</title>
   <link rel="icon" href="/assets/images/brightwave-logo.png" type="image/png" />
-  <!-- Font Awesome for Social Media Icons -->
+  <!-- Font Awesome for Social Media Icons and Amenities -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -39,44 +39,71 @@
 
   <!-- Hostels Page -->
   <main class="hostels-listing container mx-auto px-4 py-16">
-
-    <section class="intro text-center">
-      <h2 class="text-4xl font-bold mb-4">Our Hostels 🏡</h2>
-      <p class="text-lg font-medium mb-12">Explore our current and upcoming student hostel projects at BrightWave Enterprises.</p>
+    <!-- Hero-like Banner -->
+    <section class="hostels-banner relative h-80 bg-[url('/assets/images/phase1/phase1-main-entrance.jpg')] bg-cover bg-center flex items-center justify-center mb-12 overflow-hidden">
+      <!-- Gradient and Pattern Overlay -->
+      <div class="absolute inset-0 bg-gradient-to-br from-blue-900/70 via-gray-900/60 to-blue-600/70 z-10"></div>
+      <div class="absolute inset-0 bg-[url('/assets/images/abstract-pattern.png')] bg-cover bg-center opacity-10 z-10"></div>
+      <!-- Parallax Background -->
+      <div class="absolute inset-0 bg-[url('/assets/images/phase1/phase1-main-entrance.jpg')] bg-cover bg-fixed bg-center z-0"></div>
+      <!-- Content -->
+      <div class="relative text-center z-20">
+        <h1 class="text-5xl font-bold mb-4 text-white drop-shadow-lg">Our <span class="text-blue-400">Hostels</span></h1>
+        <p class="text-xl font-semibold text-gray-100 drop-shadow-md">Discover Affordable, Secure, and Modern Student Housing in Nigeria</p>
+      </div>
     </section>
 
-    <section class="hostel-grid grid grid-cols-1 md:grid-cols-2 gap-8">
-
+    <!-- Hostel Listings -->
+    <section class="hostel-grid grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
       <!-- Phase 1 - Ongoing Construction -->
-      <div class="hostel-card bg-gray-700 rounded-lg shadow-lg overflow-hidden">
+      <div class="hostel-card bg-gray-700 rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
         <img src="/assets/images/phase1/phase1-main-entrance.jpg" alt="BrightWave Phase 1 Hostel" class="w-full h-56 object-cover" />
         <div class="hostel-info p-6">
           <h3 class="text-2xl font-semibold mb-2">BrightWave Phase 1 Hostel</h3>
-          <p class="font-medium mb-4">10 Self-Contained Rooms · Private Bathrooms & Kitchens · 24/7 Security · Solar Power</p>
+          <p class="text-sm font-medium mb-2 text-gray-300">Malete, Kwara State, Nigeria</p>
+          <p class="font-medium mb-4">
+            <i class="fas fa-bed mr-2 text-blue-400"></i> 10 Self-Contained Rooms<br>
+            <i class="fas fa-bath mr-2 text-blue-400"></i> Private Bathrooms & Kitchens<br>
+            <i class="fas fa-shield-alt mr-2 text-blue-400"></i> 24/7 Security<br>
+            <i class="fas fa-solar-panel mr-2 text-blue-400"></i> Solar Power
+          </p>
+          <p class="text-sm font-medium text-gray-400 mb-4">Estimated Completion: Q2 2025</p>
           <span class="inline-block bg-yellow-500 text-gray-900 px-3 py-1 rounded-full text-sm font-semibold mb-4">Ongoing Construction 🚧</span>
           <a href="/hostels/detail" class="block text-center bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition font-semibold">View Details</a>
         </div>
       </div>
 
       <!-- Phase 2 - Coming Soon -->
-      <div class="hostel-card bg-gray-700 rounded-lg shadow-lg overflow-hidden">
+      <div class="hostel-card bg-gray-700 rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
         <img src="/assets/images/hostels/phase2-placeholder.jpg" alt="BrightWave Phase 2 Coming Soon" class="w-full h-56 object-cover" />
         <div class="hostel-info p-6">
-          <h3 class="text-2xl font-semibold mb-2">BrightWave Phase 2 (Coming Soon)</h3>
-          <p class="font-medium mb-4">32-35 Rooms Planned · Extended Amenities · Constructing after Phase 1</p>
+          <h3 class="text-2xl font-semibold mb-2">BrightWave Phase 2</h3>
+          <p class="text-sm font-medium mb-2 text-gray-300">Malete, Kwara State, Nigeria</p>
+          <p class="font-medium mb-4">
+            <i class="fas fa-bed mr-2 text-blue-400"></i> 32-35 Rooms Planned<br>
+            <i class="fas fa-concierge-bell mr-2 text-blue-400"></i> Extended Amenities<br>
+            <i class="fas fa-hard-hat mr-2 text-blue-400"></i> Construction Post-Phase 1
+          </p>
+          <p class="text-sm font-medium text-gray-400 mb-4">Expected Start: Q3 2025</p>
           <span class="inline-block bg-green-500 text-gray-900 px-3 py-1 rounded-full text-sm font-semibold mb-4">Coming Soon ⚡</span>
+          <a href="/contact" class="block text-center bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition font-semibold">Contact for Updates</a>
         </div>
       </div>
-
     </section>
 
+    <!-- Call to Action -->
+    <section class="cta bg-blue-700 text-white py-16 text-center">
+      <h2 class="text-4xl font-bold mb-4">Ready to Find Your Student Home?</h2>
+      <p class="text-lg mb-6 font-medium">Contact us to learn more about our hostels or to schedule a tour.</p>
+      <a href="/contact" class="inline-block bg-white text-blue-700 px-8 py-4 rounded-lg hover:bg-gray-100 transition font-semibold text-lg">Get in Touch</a>
+    </section>
   </main>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
       <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
-      <div class="flex justify-center space-x-6">
+      <div class="flex justify-center space-x-6 mb-4">
         <a href="https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
           <i class="fab fa-facebook-f"></i>
           <span>Facebook</span>
@@ -90,6 +117,9 @@
           <span>Instagram</span>
         </a>
       </div>
+      <button id="open-chat" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition font-semibold text-md">
+        <i class="fas fa-comments mr-2"></i>Chat with Us
+      </button>
     </div>
   </footer>
 
@@ -101,6 +131,38 @@
       toggle.addEventListener('click', () => {
         navLinks.classList.toggle('hidden');
         toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
+      });
+    });
+  </script>
+
+  <!-- Tawk.to Live Chat Script with API Integration -->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    Tawk_API.api_key = '98b9a19a5b7bf1d2b6af110875d8f5a3f14d19e1';
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/681591c4e8036f191c6e7202/1iqa42puc';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+    // Customize Tawk.to widget appearance and behavior
+    Tawk_API.onLoad = function() {
+      // Set widget colors to match site design
+      Tawk_API.customStyle = {
+        bubbleBackground: '#2563EB', // Tailwind blue-600
+        bubbleTextColor: '#FFFFFF', // White text
+        chatBackground: '#111827' // Tailwind gray-900
+      };
+      // Minimize widget on load
+      Tawk_API.minimize();
+    };
+    // Open chat when "Chat with Us" button is clicked
+    document.addEventListener('DOMContentLoaded', () => {
+      const openChatButton = document.getElementById('open-chat');
+      openChatButton.addEventListener('click', () => {
+        Tawk_API.maximize();
       });
     });
   </script>
