--- a/faq.html
+++ b/faq.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Frequently Asked Questions about BrightWave Enterprises' student hostels in Nigeria." />
-  <title>FAQs | BrightWave Enterprises</title>
+  <title>FAQ | BrightWave Enterprises</title>
   <link rel="icon" href="/assets/images/brightwave-logo.png" type="image/png" />
-  <!-- Font Awesome for Social Media Icons -->
+  <!-- Font Awesome for Social Media Icons and FAQ Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -37,41 +37,107 @@
     </ul>
   </header>
 
-  <!-- FAQ Content -->
+  <!-- FAQ Page -->
   <main class="faq container mx-auto px-4 py-16">
-    <section class="about">
-      <h2 class="text-4xl font-bold text-center mb-12">Frequently Asked Questions</h2>
-      <div class="faq-list space-y-6 max-w-3xl mx-auto">
-        <div class="faq-item bg-gray-700 rounded-lg p-6 shadow-lg">
-          <h4 class="text-xl font-semibold mb-2">📍 Where is BrightWave Hostel located?</h4>
-          <p class="font-medium">We are located in Osunlade Village, Malete, Kwara State — just minutes from the university area.</p>
-        </div>
+    <!-- Hero-like Banner -->
+    <section class="faq-banner relative h-80 bg-[url('/assets/images/hostel-background.jpg')] bg-cover bg-center flex items-center justify-center mb-12 overflow-hidden">
+      <!-- Gradient and Pattern Overlay -->
+      <div class="absolute inset-0 bg-gradient-to-br from-blue-900/70 via-gray-900/60 to-blue-600/70 z-10"></div>
+      <div class="absolute inset-0 bg-[url('/assets/images/abstract-pattern.png')] bg-cover bg-center opacity-10 z-10"></div>
+      <!-- Parallax Background -->
+      <div class="absolute inset-0 bg-[url('/assets/images/hostel-background.jpg')] bg-cover bg-fixed bg-center z-0"></div>
+      <!-- Content -->
+      <div class="relative text-center z-20">
+        <h1 class="text-5xl font-bold mb-4 text-white drop-shadow-lg">Frequently Asked <span class="text-blue-400">Questions</span></h1>
+        <p class="text-xl font-semibold text-gray-100 drop-shadow-md">Find Answers About Our Student Hostels in Nigeria</p>
+      </div>
+    </section>
 
-        <div class="faq-item bg-gray-700 rounded-lg p-6 shadow-lg">
-          <h4 class="text-xl font-semibold mb-2">🔐 What security measures are in place?</h4>
-          <p class="font-medium">24/7 security personnel, CCTV surveillance, and gated entrances with restricted access.</p>
+    <!-- FAQ Section -->
+    <section class="faq-list py-12">
+      <h2 class="text-4xl font-bold text-center mb-8">Your Questions, Answered</h2>
+      <p class="text-lg font-medium text-center mb-12 max-w-2xl mx-auto">Explore common questions about BrightWave Enterprises' student housing solutions.</p>
+      <div class="max-w-3xl mx-auto space-y-4">
+        <div class="faq-item bg-gray-700 rounded-lg shadow-lg">
+          <button class="faq-question w-full text-left p-4 flex justify-between items-center text-lg font-semibold hover:bg-gray-600 transition">
+            What amenities are included in BrightWave hostels?
+            <i class="fas fa-chevron-down transform transition-transform duration-300"></i>
+          </button>
+          <div class="faq-answer hidden p-4 text-md font-medium">
+            Our Phase 1 hostel in Malete, Kwara State, Nigeria, includes 10 self-contained rooms with private bathrooms and kitchens, 24/7 security, and solar power. Phase 2 will offer extended amenities, details to be announced.
+          </div>
         </div>
-
-        <div class="faq-item bg-gray-700 rounded-lg p-6 shadow-lg">
-          <h4 class="text-xl font-semibold mb-2">💧 Is water supply available all the time?</h4>
-          <p class="font-medium">Yes. We offer 24/7 water supply supported by a borehole and backup water tank system.</p>
+        <div class="faq-item bg-gray-700 rounded-lg shadow-lg">
+          <button class="faq-question w-full text-left p-4 flex justify-between items-center text-lg font-semibold hover:bg-gray-600 transition">
+            How can I book a room in a BrightWave hostel?
+            <i class="fas fa-chevron-down transform transition-transform duration-300"></i>
+          </button>
+          <div class="faq-answer hidden p-4 text-md font-medium">
+            Booking details for Phase 1 will be available closer to completion (Q2 2025). Please <a href="/contact" class="text-blue-400 hover:text-blue-300">contact us</a> to join our waiting list or inquire about the process.
+          </div>
         </div>
-
-        <div class="faq-item bg-gray-700 rounded-lg p-6 shadow-lg">
-          <h4 class="text-xl font-semibold mb-2">⚡ What happens during power outages?</h4>
-          <p class="font-medium">We run on solar power, and we also have a general generator to support all rooms when needed.</p>
+        <div class="faq-item bg-gray-700 rounded-lg shadow-lg">
+          <button class="faq-question w-full text-left p-4 flex justify-between items-center text-lg font-semibold hover:bg-gray-600 transition">
+            Are BrightWave hostels affordable for students?
+            <i class="fas fa-chevron-down transform transition-transform duration-300"></i>
+          </button>
+          <div class="faq-answer hidden p-4 text-md font-medium">
+            Yes, our mission is to provide affordable housing tailored for students. Pricing details will be shared as we near Phase 1 completion. Contact us for updates or to discuss your needs.
+          </div>
         </div>
-
-        <div class="faq-item bg-gray-700 rounded-lg p-6 shadow-lg">
-          <h4 class="text-xl font-semibold mb-2">🏠 Can I book a hostel room in advance?</h4>
-          <p class="font-medium">Yes, contact us via the form on our <a href="/hostels/detail" class="text-blue-400 hover:text-blue-300">hostel detail page</a> or <a href="/contact" class="text-blue-400 hover:text-blue-300">contact page</a> to reserve your space.</p>
+        <div class="faq-item bg-gray-700 rounded-lg shadow-lg">
+          <button class="faq-question w-full text-left p-4 flex justify-between items-center text-lg font-semibold hover:bg-gray-600 transition">
+            What safety measures are in place at BrightWave hostels?
+            <i class="fas fa-chevron-down transform transition-transform duration-300"></i>
+          </button>
+          <div class="faq-answer hidden p-4 text-md font-medium">
+            We prioritize student safety with 24/7 security personnel, CCTV surveillance, and secure access points. Our hostels are designed to offer a safe and comfortable living environment.
+          </div>
         </div>
-
-        <div class="faq-item bg-gray-700 rounded-lg p-6 shadow-lg">
-          <h4 class="text-xl font-semibold mb-2">🛠 Is Phase 1 open now?</h4>
-          <p class="font-medium">Phase 1 is under active construction and scheduled to open soon. Bookings will be available once completed.</p>
+        <div class="faq-item bg-gray-700 rounded-lg shadow-lg">
+          <button class="faq-question w-full text-left p-4 flex justify-between items-center text-lg font-semibold hover:bg-gray-600 transition">
+            Can I visit a BrightWave hostel before booking?
+            <i class="fas fa-chevron-down transform transition-transform duration-300"></i>
+          </button>
+          <div class="faq-answer hidden p-4 text-md font-medium">
+            Tours for Phase 1 will be available closer to completion. Please <a href="/contact" class="text-blue-400 hover:text-blue-300">reach out</a> to schedule a visit or learn more about our progress.
+          </div>
         </div>
       </div>
+    </section>
+
+    <!-- Contact Information -->
+    <section class="contact-info py-12">
+      <h2 class="text-3xl font-bold text-center mb-8">Still Have Questions?</h2>
+      <p class="text-lg font-medium text-center mb-8 max-w-2xl mx-auto">Reach out to us directly for more information.</p>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto">
+        <div class="info-item text-center p-6 bg-gray-700 rounded-lg shadow-lg flex flex-col items-center justify-center h-48">
+          <i class="fas fa-envelope text-3xl text-blue-400 mb-4"></i>
+          <h3 class="text-xl font-semibold mb-2">Email</h3>
+          <p class="text-sm font-medium break-words"><a href="mailto:brightwaveenterprises0@gmail.com" class="hover:text-blue-400">brightwaveenterprises0@gmail.com</a></p>
+        </div>
+        <div class="info-item text-center p-6 bg-gray-700 rounded-lg shadow-lg flex flex-col items-center justify-center h-48">
+          <i class="fab fa-whatsapp text-3xl text-blue-400 mb-4"></i>
+          <h3 class="text-xl font-semibold mb-2">WhatsApp</h3>
+          <p class="text-sm font-medium break-words">
+            <a href="https://wa.me/+2348037669492" class="hover:text-blue-400">+234 803 766 9492</a><br>
+            <a href="https://wa.me/+2349038402914" class="hover:text-blue-400">+234 903 840 2914</a><br>
+            <a href="https://wa.me/+2349075381905" class="hover:text-blue-400">+234 907 538 1905</a>
+          </p>
+        </div>
+        <div class="info-item text-center p-6 bg-gray-700 rounded-lg shadow-lg flex flex-col items-center justify-center h-48">
+          <i class="fas fa-map-marker-alt text-3xl text-blue-400 mb-4"></i>
+          <h3 class="text-xl font-semibold mb-2">Address</h3>
+          <p class="text-sm font-medium break-words">Malete, Kwara State, Nigeria</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action -->
+    <section class="cta bg-blue-700 text-white py-16 text-center">
+      <h2 class="text-4xl font-bold mb-4">Need More Help?</h2>
+      <p class="text-lg mb-6 font-medium">Contact us to learn more about our hostels or to schedule a tour.</p>
+      <a href="/contact" class="inline-block bg-white text-blue-700 px-8 py-4 rounded-lg hover:bg-gray-100 transition font-semibold text-lg">Get in Touch</a>
     </section>
   </main>
 
@@ -79,7 +145,7 @@
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
       <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
-      <div class="flex justify-center space-x-6">
+      <div class="flex justify-center space-x-6 mb-4">
         <a href="https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
           <i class="fab fa-facebook-f"></i>
           <span>Facebook</span>
@@ -93,17 +159,64 @@
           <span>Instagram</span>
         </a>
       </div>
+      <button id="open-chat" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition font-semibold text-md">
+        <i class="fas fa-comments mr-2"></i>Chat with Us
+      </button>
     </div>
   </footer>
 
-  <!-- Mobile Menu Toggle -->
+  <!-- Scripts -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
+      // Mobile Menu Toggle
       const toggle = document.querySelector('.menu-toggle');
       const navLinks = document.querySelector('.nav-links');
       toggle.addEventListener('click', () => {
         navLinks.classList.toggle('hidden');
         toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
+      });
+
+      // FAQ Accordion Toggle
+      const faqQuestions = document.querySelectorAll('.faq-question');
+      faqQuestions.forEach(button => {
+        button.addEventListener('click', () => {
+          const answer = button.nextElementSibling;
+          const icon = button.querySelector('i');
+          answer.classList.toggle('hidden');
+          icon.classList.toggle('rotate-180');
+        });
+      });
+    });
+  </script>
+
+  <!-- Tawk.to Live Chat Script with API Integration -->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    Tawk_API.api_key = '98b9a19a5b7bf1d2b6af110875d8f5a3f14d19e1';
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/681591c4e8036f191c6e7202/1iqa42puc';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+    // Customize Tawk.to widget appearance and behavior
+    Tawk_API.onLoad = function() {
+      // Set widget colors to match site design
+      Tawk_API.customStyle = {
+        bubbleBackground: '#2563EB', // Tailwind blue-600
+        bubbleTextColor: '#FFFFFF', // White text
+        chatBackground: '#111827' // Tailwind gray-900
+      };
+      // Minimize widget on load
+      Tawk_API.minimize();
+    };
+    // Open chat when "Chat with Us" button is clicked
+    document.addEventListener('DOMContentLoaded', () => {
+      const openChatButton = document.getElementById('open-chat');
+      openChatButton.addEventListener('click', () => {
+        Tawk_API.maximize();
       });
     });
   </script>
