--- a/hostels.html
+++ b/hostels.html
@@ -67,7 +67,7 @@
             <i class="fas fa-shield-alt mr-2 text-blue-400"></i> 24/7 Security<br>
             <i class="fas fa-solar-panel mr-2 text-blue-400"></i> Solar Power
           </p>
-          <p class="text-sm font-medium text-gray-400 mb-4">Estimated Completion: Q2 2025</p>
+          <p class="text-sm font-medium text-gray-400 mb-4">Estimated Completion: End of 2025</p>
           <span class="inline-block bg-yellow-500 text-gray-900 px-3 py-1 rounded-full text-sm font-semibold mb-4">Ongoing Construction 🚧</span>
           <a href="/hostels/detail" class="block text-center bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition font-semibold">View Details</a>
         </div>
@@ -84,7 +84,7 @@
             <i class="fas fa-concierge-bell mr-2 text-blue-400"></i> Extended Amenities<br>
             <i class="fas fa-hard-hat mr-2 text-blue-400"></i> Construction Post-Phase 1
           </p>
-          <p class="text-sm font-medium text-gray-400 mb-4">Expected Start: Q3 2025</p>
+          <p class="text-sm font-medium text-gray-400 mb-4">Expected Start: Mid-2026</p>
           <span class="inline-block bg-green-500 text-gray-900 px-3 py-1 rounded-full text-sm font-semibold mb-4">Coming Soon ⚡</span>
           <a href="/contact" class="block text-center bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition font-semibold">Contact for Updates</a>
         </div>
