--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="BrightWave Enterprises - Affordable, quality student housing in Nigeria." />
+  <meta name="description" content="BrightWave Enterprise - Your trusted partner for student hostels, land sales, residential properties, and estate development in Nigeria." />
   <!-- Open Graph Meta Tags for Previews -->
-  <meta property="og:title" content="BrightWave Enterprises" />
-  <meta property="og:description" content="Affordable, quality student housing in Nigeria. Discover modern hostels designed for comfort, security, and academic success." />
+  <meta property="og:title" content="BrightWave Enterprise" />
+  <meta property="og:description" content="Discover student hostels, land sales, residential properties, and estate development with BrightWave Enterprise in Nigeria." />
   <meta property="og:image" content="https://brightwaveenterprises.online/assets/images/brightwave-preview.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="500" />
   <meta property="og:image:height" content="500" />
   <meta property="og:url" content="https://brightwaveenterprises.online/" />
   <meta property="og:type" content="website" />
-  <title>BrightWave Enterprises</title>
+  <title>BrightWave Enterprise</title>
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
   <!-- Font Awesome for Social Media Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
@@ -26,21 +26,21 @@
     <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex items-center space-x-3">
         <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" class="h-10" />
-        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprises</h1>
+        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprise</h1>
       </div>
       <button class="md:hidden menu-toggle text-2xl text-white" aria-label="Toggle navigation menu">☰</button>
       <ul class="hidden md:flex space-x-6 text-lg font-semibold">
         <li><a href="/" class="text-blue-400 hover:text-blue-300">Home</a></li>
-        <li><a href="/about" class="hover:text-blue-300">About</a></li>
         <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
+        <li><a href="/about" class="hover:text-blue-300">About</a></li>
         <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
         <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
       </ul>
     </nav>
     <ul class="nav-links hidden bg-gray-800 shadow-md md:hidden flex-col items-center space-y-4 py-4">
       <li><a href="/" class="text-blue-400 font-semibold hover:text-blue-300">Home</a></li>
-      <li><a href="/about" class="hover:text-blue-300">About</a></li>
       <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
+      <li><a href="/about" class="hover:text-blue-300">About</a></li>
       <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
       <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
     </ul>
@@ -50,11 +50,11 @@
   <section class="hero relative h-[80vh] flex items-center justify-center bg-cover bg-center" style="background-image: url('/assets/images/who-we-are.jpg');">
     <div class="absolute inset-0 bg-black opacity-60"></div>
     <div class="relative text-center text-white px-4">
-      <h1 class="text-5xl md:text-6xl font-extrabold mb-4 tracking-tight">Modern Hostels for a Brighter Future</h1>
-      <p class="text-xl md:text-2xl mb-6 font-medium">Affordable, Secure, and Student-Centric Housing in Nigeria</p>
+      <h1 class="text-5xl md:text-6xl font-extrabold mb-4 tracking-tight">Building a Brighter Future with BrightWave</h1>
+      <p class="text-xl md:text-2xl mb-6 font-medium">Student Hostels, Land Sales, Residential Properties, and Estate Development in Nigeria</p>
       <div class="flex flex-col md:flex-row justify-center gap-4">
-        <a href="/hostels" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg hover:bg-blue-700 transition font-semibold text-lg">View Our Hostels</a>
-        <a href="/contact" class="inline-block bg-transparent border-2 border-white text-white px-8 py-4 rounded-lg hover:bg-white hover:text-gray-900 transition font-semibold text-lg">Contact Us</a>
+        <a href="/hostels" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg hover:bg-blue-700 transition font-semibold text-lg">Explore Our Services</a>
+        <a href="/contact" class="inline-block bg-transparent border-2 border-white text-white px-8 py-4 rounded-lg hover:bg-white hover:text-gray-900 transition font-semibold text-lg">Get in Touch</a>
       </div>
     </div>
   </section>
@@ -64,8 +64,8 @@
     <h2 class="text-4xl font-bold text-center mb-8">Who We Are</h2>
     <div class="flex flex-col md:flex-row items-center gap-8">
       <p class="text-lg md:w-1/2 font-medium leading-relaxed">
-        BrightWave Enterprises is a real estate-driven movement committed to reshaping student accommodation in Nigeria. 
-        We create affordable, stylish, and secure hostels that support students’ growth while enriching the communities we build in.
+        BrightWave Enterprise is a dynamic real estate company committed to transforming Nigeria’s property landscape. 
+        From affordable student hostels to land sales, residential properties, and estate development, we’re building communities that inspire growth and opportunity.
       </p>
       <img src="/assets/images/brightwave-project-1.jpg" alt="Our Vision" class="md:w-1/2 rounded-lg shadow-lg" />
     </div>
@@ -74,44 +74,70 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="bg-gray-800 py-16">
+  <!-- Services Section -->
+  <section id="services" class="bg-gray-800 py-16">
     <div class="container mx-auto px-4">
-      <h2 class="text-4xl font-bold text-center mb-8">Our Projects</h2>
-      <p class="text-lg text-center mb-12 font-medium">We're transforming ideas into infrastructure. Here's a look at what we're building.</p>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden">
-          <img src="/assets/images/brightwave-project-1.jpg" alt="BrightWave Hostel Front" class="w-full h-48 object-cover" />
+      <h2 class="text-4xl font-bold text-center mb-8">Our Services</h2>
+      <p class="text-lg text-center mb-12 font-medium">Explore our diverse range of real estate solutions tailored to your needs.</p>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center">
+          <img src="/assets/images/brightwave-project-1.jpg" alt="Student Hostels" class="w-full h-48 object-cover" />
           <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-2">Hostel Project – Phase 1</h3>
-            <p class="font-medium">Located in Kwara State, our 10-room hostel is designed for convenience, community, and security.</p>
+            <h3 class="text-2xl font-semibold mb-2">Student Hostels</h3>
+            <p class="font-medium">Affordable, secure, and modern hostels designed for students’ comfort and success.</p>
           </div>
         </div>
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden">
-          <img src="/assets/images/brightwave-project-2.jpg" alt="BrightWave Hostel Layout" class="w-full h-48 object-cover" />
+        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center">
+          <img src="/assets/images/land-sale.jpg" alt="Land Sales" class="w-full h-48 object-cover" />
           <div class="p-6">
-            <h3 class="text-2xl font-semibold mb-2">Architectural Layout</h3>
-            <p class="font-medium">Modern designs that meet comfort and student lifestyle — crafted with purpose and precision.</p>
+            <h3 class="text-2xl font-semibold mb-2">Land Sales</h3>
+            <p class="font-medium">Prime plots for sale in strategic locations, perfect for investment or development.</p>
+          </div>
+        </div>
+        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center">
+          <img src="/assets/images/residential.jpg" alt="Residential Properties" class="w-full h-48 object-cover" />
+          <div class="p-6">
+            <h3 class="text-2xl font-semibold mb-2">Residential Properties</h3>
+            <p class="font-medium">Quality homes built for modern living, from apartments to family houses.</p>
+          </div>
+        </div>
+        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center">
+          <img src="/assets/images/estate.jpg" alt="Estate Development" class="w-full h-48 object-cover" />
+          <div class="p-6">
+            <h3 class="text-2xl font-semibold mb-2">Estate Development</h3>
+            <p class="font-medium">Master-planned estates that blend luxury, functionality, and community.</p>
           </div>
         </div>
       </div>
-      <div class="text-center mt-8">
-        <a href="/hostels" class="inline-block text-blue-400 hover:text-blue-300 font-semibold text-lg">Explore All Projects</a>
+    </div>
+  </section>
+
+  <!-- Featured Project: BrightWave Estate -->
+  <section id="brightwave-estate" class="container mx-auto px-4 py-16">
+    <h2 class="text-4xl font-bold text-center mb-8">Introducing BrightWave Estate</h2>
+    <div class="flex flex-col md:flex-row items-center gap-8">
+      <img src="/assets/images/brightwave-estate.jpg" alt="BrightWave Estate" class="md:w-1/2 rounded-lg shadow-lg" />
+      <div class="md:w-1/2">
+        <p class="text-lg font-medium leading-relaxed mb-4">
+          We’re excited to announce BrightWave Estate, a new development on 6 acres of prime land at Obada Ikija, Abeokuta. 
+          This estate will offer residential plots, modern homes, and community amenities, designed to elevate living standards in the region.
+        </p>
+        <a href="/contact" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition font-semibold">Inquire About BrightWave Estate</a>
       </div>
     </div>
   </section>
 
   <!-- Call to Action -->
   <section class="cta bg-blue-700 text-white py-16 text-center">
-    <h2 class="text-4xl font-bold mb-4">Interested in Partnering or Investing?</h2>
-    <p class="text-lg mb-6 font-medium">We’re always open to collaborative ideas that align with our mission.</p>
-    <a href="/contact" class="inline-block bg-white text-blue-700 px-8 py-4 rounded-lg hover:bg-gray-100 transition font-semibold text-lg">Get In Touch</a>
+    <h2 class="text-4xl font-bold mb-4">Partner with BrightWave Enterprise</h2>
+    <p class="text-lg mb-6 font-medium">Whether you’re a student, investor, or developer, we’re here to bring your real estate vision to life.</p>
+    <a href="/contact" class="inline-block bg-white text-blue-700 px-8 py-4 rounded-lg hover:bg-gray-100 transition font-semibold text-lg">Get Started Today</a>
   </section>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8">
     <div class="container mx-auto px-4 text-center">
-      <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
+      <p class="mb-4 font-medium">© 2025 BrightWave Enterprise. All rights reserved.</p>
       <div class="flex justify-center space-x-6 mb-4">
         <a href="https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
           <i class="fab fa-facebook-f"></i>
