--- a/index.html
+++ b/index.html
@@ -87,22 +87,28 @@
             <p class="font-medium">Affordable, secure, and modern hostels designed for students’ comfort and success.</p>
           </div>
         </div>
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center">
+        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center relative">
           <img src="/assets/images/land-sale.jpg" alt="Land Sales" class="w-full h-48 object-cover" />
           <div class="p-6">
             <h3 class="text-2xl font-semibold mb-2">Land Sales</h3>
             <p class="font-medium">Prime plots for sale in strategic locations, perfect for investment or development.</p>
           </div>
         </div>
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center">
+        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center relative">
           <img src="/assets/images/residential.jpg" alt="Residential Properties" class="w-full h-48 object-cover" />
+          <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+            <span class="text-white text-2xl font-bold bg-blue-600 px-4 py-2 rounded">Coming Soon</span>
+          </div>
           <div class="p-6">
             <h3 class="text-2xl font-semibold mb-2">Residential Properties</h3>
             <p class="font-medium">Quality homes built for modern living, from apartments to family houses.</p>
           </div>
         </div>
-        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center">
+        <div class="bg-gray-700 rounded-lg shadow-lg overflow-hidden text-center relative">
           <img src="/assets/images/estate.jpg" alt="Estate Development" class="w-full h-48 object-cover" />
+          <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+            <span class="text-white text-2xl font-bold bg-blue-600 px-4 py-2 rounded">Coming Soon</span>
+          </div>
           <div class="p-6">
             <h3 class="text-2xl font-semibold mb-2">Estate Development</h3>
             <p class="font-medium">Master-planned estates that blend luxury, functionality, and community.</p>
@@ -116,13 +122,15 @@
   <section id="brightwave-estate" class="container mx-auto px-4 py-16">
     <h2 class="text-4xl font-bold text-center mb-8">Introducing BrightWave Estate</h2>
     <div class="flex flex-col md:flex-row items-center gap-8">
-      <img src="/assets/images/brightwave-estate.jpg" alt="BrightWave Estate" class="md:w-1/2 rounded-lg shadow-lg" />
+      <img src="/assets/images/brightwave-estate-placeholder.jpg" alt="BrightWave Estate" class="md:w-1/2 rounded-lg shadow-lg" />
       <div class="md:w-1/2">
         <p class="text-lg font-medium leading-relaxed mb-4">
-          We’re excited to announce BrightWave Estate, a new development on 6 acres of prime land at Obada Ikija, Abeokuta. 
-          This estate will offer residential plots, modern homes, and community amenities, designed to elevate living standards in the region.
+          We’re excited to announce BrightWave Estate, a future development on 6 acres of prime land at Obada Ikija, Abeokuta. 
+          This estate will offer residential plots, modern homes, and community amenities—stay tuned for updates!
         </p>
-        <a href="/contact" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition font-semibold">Inquire About BrightWave Estate</a>
+        <div class="text-center">
+          <span class="text-white text-2xl font-bold bg-blue-600 px-4 py-2 rounded">Coming Soon</span>
+        </div>
       </div>
     </div>
   </section>
